# gtk4-linux-clion

./: README.md
gtk4_helloworld/: CMakeLists.txt  example-1.c
gtk4_window/: CMakeLists.txt
